# NomadTemplate

./: Cargo.toml  README.md
samples/: test.nomad  test.nomadtemplate
src/: cli.rs  main.rs
templates/: traefik.tera
